--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,24 @@
-Package             Version
-------------------- -----------
-asgiref             3.7.2
-attrs               23.2.0
-beautifulsoup4      4.12.3
-certifi             2024.2.2
-Django              4.2.11
-django-bootstrap-v5 1.0.11
-exceptiongroup      1.2.1
-Faker               25.2.0
-h11                 0.14.0
-idna                3.7
-outcome             1.3.0.post0
-pip                 23.3.2
-PySocks             1.7.1
-python-dateutil     2.9.0.post0
-selenium            4.21.0
-setuptools          69.0.3
-six                 1.16.0
-sniffio             1.3.1
-sortedcontainers    2.4.0
-soupsieve           2.5
-sqlparse            0.4.4
-trio                0.25.1
-trio-websocket      0.11.1
-typing_extensions   4.10.0
-urllib3             2.2.1
-wheel               0.42.0
-wsproto             1.2.0
+asgiref==3.7.2
+attrs==23.2.0
+beautifulsoup4==4.12.3
+certifi==2024.2.2
+Django==4.2.11
+django-bootstrap-v5==1.0.11
+exceptiongroup==1.2.1
+Faker==25.2.0
+h11==0.14.0
+idna==3.7
+outcome==1.3.0.post0
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+selenium==4.21.0
+six==1.16.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.5
+sqlparse==0.4.4
+trio==0.25.1
+trio-websocket==0.11.1
+typing_extensions==4.10.0
+urllib3==2.2.1
+wsproto==1.2.0
