--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,12 @@ exceptiongroup==1.2.1
 Faker==25.2.0
 h11==0.14.0
 idna==3.7
+iniconfig==2.0.0
 outcome==1.3.0.post0
+packaging==24.0
+pluggy==1.5.0
 PySocks==1.7.1
+pytest==8.2.0
 python-dateutil==2.9.0.post0
 selenium==4.21.0
 six==1.16.0
@@ -17,6 +21,7 @@ sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.5
 sqlparse==0.4.4
+tomli==2.0.1
 trio==0.25.1
 trio-websocket==0.11.1
 typing_extensions==4.10.0
